--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@netlify/plugin-nextjs": "^5.0.0",
     "next": "^14.2.0",
     "react": "^18.2.0",
