--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@netlify/plugin-nextjs": "^5.0.0",
+    "algoliasearch": "^4.23.3",
     "next": "^14.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-instantsearch": "^7.7.1",
+    "use-snipcart": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
